--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -18,7 +18,9 @@
                                 <field
                                     name="assignee_id"
                                     readonly="1"
-                                    domain="[('user_ids.active', '=', True)]"/>
+                                    domain="[
+                                        ('user_ids.can_be_used_for_internal_support', '=', True),
+                                        ]"/>
                             </group>
                             <group>
                                 <field name="author_id" readonly="1"/>
