--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -16,12 +16,13 @@
                                 <field name="project_id" readonly="1"/>
                                 <field name="tag_ids" readonly="1"/>
                                 <field
-                                    name="assignee_id"
+                                    name="assignee_customer_id"
                                     readonly="1"
                                     options="{'no_create': True}"
                                     domain="[
                                         ('user_ids.internal_support', '=', True),
                                         ]"/>
+                                <field name="assignee_supplier_id" readonly="1"/>
                             </group>
                             <group name="info" attrs="{'invisible': [('id', '=', False)]}">
                                 <field name="author_id" readonly="1"/>
@@ -115,7 +116,7 @@
                 <field name="project_id" position="attributes">
                     <attribute name="readonly">0</attribute>
                 </field>
-                <field name="assignee_id" position="attributes">
+                <field name="assignee_customer_id" position="attributes">
                     <attribute name="readonly">0</attribute>
                 </field>
                 <group name="project" position="attributes">
@@ -162,7 +163,8 @@
                     <field name="color"/>
                     <field name="priority"/>
                     <field name="date_deadline"/>
-                    <field name="assignee_id"/>
+                    <field name="assignee_customer_id"/>
+                    <field name="assignee_supplier_id"/>
                     <field name="tag_ids"/>
                     <field name="customer_kanban_report"/>
                     <field name="id"/>
@@ -200,7 +202,8 @@
                                     <field name="priority" widget="priority"/>
                                 </div>
                                 <div class="oe_kanban_bottom_right">
-                                    <img t-att-src="kanban_image('res.partner', 'image_small', record.assignee_id.raw_value)" t-att-title="record.assignee_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
+                                    <img t-if="record.assignee_customer_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_customer_id.raw_value)" t-att-title="record.assignee_customer_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
+                                    <img t-if="record.assignee_supplier_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_supplier_id.raw_value)" t-att-title="record.assignee_supplier_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
                                 </div>
                             </div>
                             <div class="oe_clear"></div>
