--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
-
+<openerp>
+<data>
         <record id="view_external_task_form" model="ir.ui.view">
             <field name="model">external.task</field>
             <field name="arch" type="xml">
@@ -95,6 +95,8 @@
                             .fa-paperclip {visibility: hidden;}
                             .fa-pencil-square-o {visibility: hidden;}
                             .o_thread_message_star {visibility: hidden;}
+                            button.oe_full {visibility: hidden;}
+                            .oe_attachment_file {visibility: hidden;}
                         </style>
                         <field name="message_ids" widget="mail_thread"/>
                     </div>
@@ -242,4 +244,6 @@
             web_icon="project_api_client/static/description/icon.png"
             groups="project_api_client.group_support_user"/>
 
-</odoo>
+</data>
+</openerp>
+
