--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -19,9 +19,7 @@
                                     name="assignee_customer_id"
                                     readonly="1"
                                     options="{'no_create': True}"
-                                    domain="[
-                                        ('user_ids.internal_support', '=', True),
-                                        ]"/>
+                                    domain="[('user_ids.internal_support', '=', True)]"/>
                                 <field name="assignee_supplier_id" readonly="1"/>
                             </group>
                             <group name="info" attrs="{'invisible': [('id', '=', False)]}">
@@ -42,26 +40,15 @@
                                         </tree>
                                         <kanban>
                                             <field name="id"/>
-                                            <field name="mimetype"/>
-                                            <field name="type"/>
                                             <field name="datas_fname"/>
                                             <field name="name"/>
                                             <templates>
                                                 <t t-name="kanban-box">
-                                                    <div class="oe_kanban_global_click">
-                                                        <div class="oe_kanban_vignette">
-                                                            <div class="oe_attachment">
-                                                                <div class="oe_name">
-                                                                    <field name="name"/>
-                                                                </div>
-                                                                <div t-if="record.type.raw_value == 'binary'">
-                                                                    <t t-set="webimage" t-value="new RegExp('image.*(gif|jpeg|jpg|png)').test(record.mimetype.value)"/>
-                                                                    <div t-if="!webimage" class="o_image" t-att-data-mimetype="record.mimetype.value">
-                                                                        <img t-att-src="'/mail/static/src/img/mimetypes/' + record.mimetype.value + '.png'"></img>
-                                                                    </div>
-                                                                    <div t-if="webimage" class="o_kanban_attachment_image">
-                                                                        <img t-att-src="kanban_image('ir.attachment', 'datas', record.id.value)"/>
-                                                                    </div>
+                                                    <div class="oe_kanban_global_area o_kanban_attachment oe_kanban_global_click">
+                                                        <div class="o_kanban_details">
+                                                            <div class="o_kanban_details_wrapper">
+                                                                <div t-att-title="record.datas_fname.raw_value" class="o_kanban_record_title">
+                                                                    <field name="datas_fname" class="o_text_overflow"/>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -148,7 +135,8 @@
                     <separator/>
                     <filter string="My task" name="my_task"/>
                     <separator/>
-                    <filter string="Stage" context="{'group_by': 'stage_name'}"/>
+                    <filter string="Stage" name="stage"
+                            context="{'group_by': 'stage_name'}"/>
                     <separator/>
                 </search>
             </field>
@@ -156,7 +144,7 @@
 
         <record model="ir.ui.view" id="view_external_task_kanban">
             <field name="model">external.task</field>
-        <field name="arch" type="xml">
+            <field name="arch" type="xml">
                 <kanban default_group_by="stage_name" >
                     <field name="name"/>
                     <field name="stage_name"/>
@@ -172,39 +160,41 @@
                     <templates>
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
-                            <div class="o_dropdown_kanban dropdown" groups="base.group_user">
-                                <a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >
-                                    <span class="fa fa-bars fa-lg"/>
-                                </a>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                    <t t-if="widget.editable"><li><a type="edit">Edit Task</a></li></t>
-                                    <t t-if="widget.deletable"><li><a type="delete">Delete</a></li></t>
-                                    <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
-                                </ul>
-                            </div>
-
                             <div class="oe_kanban_content">
-                                <div>
-                                    <strong><field name="id"/> - <field name="name"/></strong>
-                                </div>
-                                <div>
-                                    <field name="create_date"/>
-                                </div>
-                                <div class="text-muted">
-                                    <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())" t-set="red">oe_kanban_text_red</t>
-                                    <span t-attf-class="#{red || ''}"><i><field name="date_deadline"/></i></span>
+                                <div class="o_kanban_record_top">
+                                    <div class="o_kanban_record_headings">
+                                        <strong class="o_kanban_record_title"><field name="id"/> - <field name="name"/></strong><br/>
+                                        <small class="o_kanban_record_subtitle text-muted">
+                                            <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())" t-set="red">oe_kanban_text_red</t>
+                                            <span t-attf-class="#{red || ''}"><i><field name="date_deadline"/></i></span>
+                                            <span><field name="create_date"/></span>
+                                        </small>
+                                    </div>
+                                    <div class="o_dropdown_kanban dropdown" groups="base.group_user">
+                                        <a role="button" class="dropdown-toggle o-no-caret btn" data-toggle="dropdown" data-display="static" href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                            <span class="fa fa-ellipsis-v"/>
+                                        </a>
+                                        <div class="dropdown-menu" role="menu">
+                                            <a t-if="widget.editable" role="menuitem" type="edit" class="dropdown-item">Edit Task</a>
+                                            <a t-if="widget.deletable" role="menuitem" type="delete" class="dropdown-item">Delete</a>
+                                            <div role="separator" class="dropdown-divider"></div>
+                                            <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                        </div>
+                                    </div>
                                 </div>
                                 <t t-raw="record.customer_kanban_report.value"/>
                                 <div class="oe_kanban_footer_left" style="margin-top:5px;">
                                     <field name="tag_ids"/>
                                 </div>
+                                <div class="o_kanban_record_bottom">
                                 <div class="oe_kanban_bottom_left">
                                     <field name="priority" widget="priority"/>
                                 </div>
                                 <div class="oe_kanban_bottom_right">
-                                    <img t-if="record.assignee_customer_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_customer_id.raw_value)" t-att-title="record.assignee_customer_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
-                                    <img t-if="record.assignee_supplier_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_supplier_id.raw_value)" t-att-title="record.assignee_supplier_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
+                                    <img t-if="record.assignee_customer_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_customer_id.raw_value)" t-att-alt="record.assignee_customer_id.value" t-att-title="record.assignee_customer_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
+                                    <img t-if="record.assignee_supplier_id" t-att-src="kanban_image('res.partner', 'image_small', record.assignee_supplier_id.raw_value)" t-att-alt="record.assignee_supplier_id.value" t-att-title="record.assignee_supplier_id.value" width="24" height="24" class="oe_kanban_avatar pull-right"/>
                                 </div>
+                            </div>
                             </div>
                             <div class="oe_clear"></div>
                         </div>
@@ -218,6 +208,7 @@
             <field name="name">Create a Ticket</field>
             <field name="res_model">external.task</field>
             <field name="view_mode">form</field>
+            <field name="groups_id" eval="[(4, ref('project_api_client.group_support_user'))]"/>
         </record>
 
         <record id="action_view_external_task" model="ir.actions.act_window">
