--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -57,7 +57,7 @@
                                 placeholder="Add a Description..."
                                 colspan="4"
                             />
-                                <group string="Attachments" colspan="4">
+<!--                                 <group string="Attachments" colspan="4">
                                     <field name="attachment_ids" nolabel="1">
                                         <tree>
                                             <field name="name" />
@@ -105,7 +105,7 @@
                                             <field name="res_model" invisible="1" />
                                         </form>
                                     </field>
-                                </group>
+                                </group> -->
                                 <div class="oe_clear" />
                             </page>
                             <page string="Technical" name="technical">
@@ -119,7 +119,7 @@
                                 </group>
                             </page>
                         </notebook>
-                        <style type="text/css" media="screen">
+<!--                         <style type="text/css" media="screen">
 .o_ChatterTopbar_rightSection {
     visibility: hidden;
 }
@@ -138,11 +138,11 @@
 .o_ComposerTextInput_textarea {
     min-height: 200px;
 }
-                    </style>
+                    </style> -->
                     </sheet>
-                    <div class="oe_chatter">
-                        <field name="message_ids" widget="mail_thread" />
-                    </div>
+                    <!--<div class="oe_chatter">
+                         <field name="message_ids" widget="mail_thread" />
+                    </div>-->
                 </form>
             </field>
         </record>
