--- a/project_api_client/views/project_view.xml
+++ b/project_api_client/views/project_view.xml
@@ -58,7 +58,7 @@
                                 colspan="4"
                             />
                                 <group string="Attachments" colspan="4">
-                                    <field name="attachment_ids" nolabel="1">
+                                    <field name="attachment_ids" nolabel="1" colspan="2">
                                         <tree>
                                             <field name="name" />
                                             <field
@@ -150,10 +150,6 @@
         <record id="view_external_task_manager_form" model="ir.ui.view">
             <field name="model">external.task</field>
             <field name="inherit_id" ref="view_external_task_form" />
-            <field
-            name="groups_id"
-            eval="[(4, ref('project_api_client.group_support_manager'))]"
-        />
             <field name="arch" type="xml">
                 <field name="priority" position="attributes">
                     <attribute name="readonly">0</attribute>
