--- a/project_api/views/project_view.xml
+++ b/project_api/views/project_view.xml
@@ -8,6 +8,7 @@
             <field name="partner_id" position="after">
                 <newline />
                 <field name="customer_project_name" />
+                <field name="customer_display" />
                 <field
                     name="tag_ids"
                     widget="many2many_tags"
